--- a/authService-updated/src/main/resources/config.dev.properties
+++ b/authService-updated/src/main/resources/config.dev.properties
@@ -1,6 +1,6 @@
 # JWT TOKEN                        #
 ####################################
-jwt.secret=iffcotokio
+jwt.secret=iamsuperman
 jwt.token.validity=36000000
 jwt.authorities.key=authorities
 jwt.token.prefix=Bearer
