--- a/authService-updated/src/main/resources/config.properties
+++ b/authService-updated/src/main/resources/config.properties
@@ -8,6 +8,23 @@ scheduler.cron-expression.motor-breakin-batch=0 0 0/2 * * ?
 scheduler.cron-expression.timeout-transactions=0 0 0/3 * * ?
 scheduler.cron-expression.delete-portal-request-origin-logs-daily=0 0 5 * * ?
 
+# JWT TOKEN                        #
+####################################
+jwt.secret=iamsuperman
+jwt.token.validity=36000000
+jwt.authorities.key=authorities
+jwt.token.prefix=Bearer
+jwt.token.header=Jwt-Token
+jwt.http.options=OPTIONS
+jwt.arrays.administrtion=User Management Portal
+jwt.issuer=Get Arrays,LLC
+jwt.token.not-verified.message=Token cannot be verified
+jwt.forbidden.message=You need to log in to access this page
+jwt.access.denied.message=You do not have permission to access this page
+jwt.public.urls=/authgateway/auth/register,/authgateway/auth/login,/auth/forgot-password,/auth/validate-token,/auth/reset-password
+
+
+
 
 #RETURN CODE DESCRIPTION
 1=Success
