--- a/api-gateway-updated/api-gateway/build.gradle
+++ b/api-gateway-updated/api-gateway/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '2.7.10'
+    id 'org.springframework.boot' version '2.7.18'
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
@@ -25,17 +25,21 @@ ext {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
-
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    
+    // Eureka Server (service registry)
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server:3.1.8'
-    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-gateway
+    
+    // Spring Cloud Gateway (Reactive)
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway:4.1.5'
 
+    // Spring WebFlux is required by Gateway (usually pulled transitively, but safe to include)
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
-
+    // Testing
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
+
 
 dependencyManagement {
     imports {
