--- a/authService-updated/.settings/org.eclipse.buildship.core.prefs
+++ b/authService-updated/.settings/org.eclipse.buildship.core.prefs
@@ -1,11 +1,11 @@
-arguments=--init-script C\:\\Users\\Wanve.abhishek\\AppData\\Roaming\\Code\\User\\globalStorage\\redhat.java\\1.43.1\\config_win\\org.eclipse.osgi\\58\\0\\.cp\\gradle\\init\\init.gradle --init-script C\:\\Users\\Wanve.abhishek\\AppData\\Roaming\\Code\\User\\globalStorage\\redhat.java\\1.43.1\\config_win\\org.eclipse.osgi\\58\\0\\.cp\\gradle\\protobuf\\init.gradle
+arguments=
 auto.sync=false
 build.scans.enabled=false
-connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
+connection.gradle.distribution=GRADLE_DISTRIBUTION(VERSION(8.9))
 connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
-java.home=C\:/Program Files (x86)/Java/jre6
+java.home=
 jvm.arguments=
 offline.mode=false
 override.workspace.settings=true
