--- a/authService-updated/bin/main/application.yml
+++ b/authService-updated/bin/main/application.yml
@@ -10,9 +10,12 @@ spring:
   profiles:
     active:
     - dev
-#eureka:
-#  client:
-#    service-url:
-#      defaultZone: http://localhost:8761/eureka
-#    register-with-eureka: true
-#    fetch-registry: true
+eureka:
+  instance:
+    prefer-ip-address: true
+    ip-address: localhost
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+    register-with-eureka: true
+    fetch-registry: true
