--- a/authService-updated/bin/main/config.properties
+++ b/authService-updated/bin/main/config.properties
@@ -21,7 +21,7 @@ jwt.issuer=Get Arrays,LLC
 jwt.token.not-verified.message=Token cannot be verified
 jwt.forbidden.message=You need to log in to access this page
 jwt.access.denied.message=You do not have permission to access this page
-jwt.public.urls=/authgateway/auth/register,/authgateway/auth/login,/auth/forgot-password,/auth/validate-token,/auth/reset-password
+jwt.public.urls=/auth/register,/auth/login,/auth/forgot-password,/auth/validate-token,/auth/reset-password
 
 
 
