--- a/ticket-service/build.gradle
+++ b/ticket-service/build.gradle
@@ -33,11 +33,9 @@ dependencies {
 	implementation 'org.springframework.kafka:spring-kafka'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.7.18'
     
-     implementation 'org.springframework.cloud:spring-cloud-starter'
-    implementation('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client') {
-    exclude group: 'org.springframework.cloud', module: 'spring-cloud-loadbalancer'
-}
-	
+    implementation 'org.springframework.cloud:spring-cloud-starter'
+   	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server:3.1.8'
+   	
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
