--- a/ticket-processing-service/src/main/resources/application.yml
+++ b/ticket-processing-service/src/main/resources/application.yml
@@ -3,15 +3,15 @@ spring:
     name: ticket-processing-service
 
   kafka:
-    bootstrap-servers: kafka:9092
+    bootstrap-servers: http://localhost:9092
 
-  redis:
-    host: redis
-    port: 6379
+#  redis:
+#    host: redis
+#    port: 6379
 
   data:
     mongodb:
-      uri: mongodb://root:example@mongo:27017/test?authSource=admin
+      uri: mongodb+srv://adminColdplay:A0Qmud4BgwVmOsaF@cluster0.w5qkm.mongodb.net/authDB?retryWrites=true&w=majority&appName=Cluster0
 
 server:
   port: 8082
@@ -23,4 +23,4 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://service-registry:8761/eureka
+      defaultZone: http://localhost:8761/eureka
