notification service added,new kakfa topics handled

--- a/api-gateway-updated/api-gateway/src/main/resources/application.yml
+++ b/api-gateway-updated/api-gateway/src/main/resources/application.yml
@@ -30,6 +30,13 @@ spring:
           filters:
             - StripPrefix=1
 
+        - id: ticket-processing-service
+          uri: http://localhost:8082
+          predicates:
+            - Path=/ticketprocessing/**
+          filters:
+            - StripPrefix=1
+
       default-filters:
         - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials
 
