--- a/notification-service/build.gradle
+++ b/notification-service/build.gradle
@@ -31,7 +31,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	
 	 implementation 'org.springframework.cloud:spring-cloud-starter'
-    
+	 implementation 'org.springframework.kafka:spring-kafka'
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail
+     implementation 'org.springframework.boot:spring-boot-starter-mail'
  
     implementation('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client') {
     exclude group: 'org.springframework.cloud', module: 'spring-cloud-loadbalancer'
